--- a/phone.html
+++ b/phone.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">
   </head>
   <body>
-    <p>a</p>
+    <h1>Cleanbag for phone is coming soon!</h1>
   </body>
 </html>
