--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
         </div>
       </div>
     </div>
+    <div class="body-reviews">
+      <div class="body-reviews-title">
+        <h1>What others had to say about Cleanbag<p class="copyright">©</p></h1>
+      </div>
+    </div>
     <div class="footer">
       <div class="footer-image">
         <img class="footer-image-image" src="images/Cleanbag.png">
