--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
     <div class="head">
       <div class="head-menu">
-          <img class="head-image" src="images/Cleanbag.png" href="google.com">
+          <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
           <img class="head-image-menu" src="images/menuclean.png">
       </div>
       <div class="head-button">
@@ -124,6 +124,9 @@
         <p>
         <p class="footer-text">
           Harens Lyceum 3A | Wo+ Website plastic | 2024 
+        </p>
+        <p class="footer-text">
+          *Schoolopdracht | Wij zijn niet verantwoordelijk voor aankopen* 
         </p>
       </div>
     </div>
