--- a/index.html
+++ b/index.html
@@ -107,6 +107,40 @@
       <div class="body-reviews-title">
         <h1>What others had to say about Cleanbag<p class="copyright">©</p></h1>
       </div>
+      <div class="body-review">
+        <div>
+          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
+        </div>
+        <div>
+          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
+        </div>
+        <div>
+          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
+        </div>
+      </div>
+      <div class="body-review">
+        <div>
+          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
+        </div>
+        <div>
+          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
+        </div>
+        <div>
+          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
+        </div>
+      </div>
+    </div>
+    <div class="body-timer">
+      <h1 id="minutes">0<h1 id="minute">0:<h1 id="seconds">0<h1 id="second">0</h1></h1></h1></h1>
+    </div>
+    <div class="body-timer-text">
+      <p>Time you've been here</p>
+    </div>
+    <div class="body-co2">
+      <h1 class="co2" id="co2">0.0416</h1>
+    </div>
+    <div class="body-co2-text">
+      <p>Grams of co2</p>
     </div>
     <div class="footer">
       <div class="footer-image">
