about.html + minor bugfixes

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <p class="footer-text">
           Harens Lyceum 3A | Wo+ Website plastic | 2024 
         </p>
-        <p class="footer-text">
+        <p class="footer-text-disclaimer">
           *Schoolopdracht | Wij zijn niet verantwoordelijk voor aankopen* 
         </p>
       </div>
