Updated the icons

--- a/index.html
+++ b/index.html
@@ -26,23 +26,15 @@
     <div class="head">
       <div class="head-menu">
           <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
-          <img class="head-image-menu" src="images/menuclean.png">
+          <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='about.html'">
       </div>
       <div class="head-button">
-        <button>
-          About
-        </button>
-        <button>
-          Team
-        </button>
-        <button>
-          store
-        </button>
+        <img class="head-button-image" src="images/Cleanbag shoppingcart.png" onclick="window.location.href=`c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9`">
       </div>
     </div>
     <div class="body">
       <div class="body-image">
-        <img class="body-image-image" src="images/cleanbag menu final.png">
+        <a href="https://www.c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9" target="_blank"><img class="body-image-image" src="images/cleanbag menu final.png"></a>
       </div>
       <div class="body-title">
         <h1>Cleanbag<p class="copyright">©</p></h1>
