About page update
Added some stuff to the about page.
Moved some feautures from index.html to about.html

--- a/about.html
+++ b/about.html
@@ -10,25 +10,101 @@
          <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lilita+One&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="head">
-            <div class="head-menu">
-                <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
-                <img class="head-image-menu" src="images/menuclean.png">
+      <div class="head">
+        <div class="head-menu">
+            <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
+            <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='about.html'">
+        </div>
+        <div class="head-button">
+          <img class="head-button-image" src="images/Cleanbag shoppingcart.png" onclick="window.location.href=`c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9`">
+        </div>
+      </div>
+          <div class="body">
+            <div>
+              <h1>About the Cleanbag<p class="copyright">©</p></h1>
             </div>
-            <div class="head-button">
-              <button>
-                About
-              </button>
-              <button>
-                Team
-              </button>
-              <button>
-                store
-              </button>
+            <div class="body-images">
+              <div>
+                <img class="body-image-1" src="images/cleanbag indoctrinatie 3.png">
+              </div>
+              <div>
+                <img class="body-image-1" src="images/cleanbag indoctrinatie 2.png">
+              </div>
+              <div>
+                <img class="body-image-1" src="images/cleanbag indoctrinatie 1.png">
+              </div>
+            </div>
+            <div class="body-text">
+              <div>
+                <p>100% bio-plastics</p>
+              </div>
+              <div>
+                <p>Innovative</p>
+              </div>
+              <div>
+                <p>Extremely useful</p>
+              </div>
             </div>
           </div>
-          <div class="body">
-            <h1>About the Cleanbag<p class="copyright">©</p></h1>
+          <div class="body-steps-title">
+            <h1 class="body-steps-title1">How is the Cleanbag<p class="copyright">©</p> made?</h1>
+          </div>
+          <div class="body-steps">
+            <div class="body-steps1">
+              <div>
+                  <img class="body-steps1-image" src="images/cleanbag stappen 1.png">
+              </div>
+            </div>
+            <div class="body-steps1-text">
+              <div>
+                <h1 class="body-steps1-title">1: Making the Bio-Plastic</h1>
+              </div>
+              <div>
+                <p class="body-steps1-text">a</p>
+              </div>
+            </div>
+          </div>
+           <div class="body-steps">
+            <div class="body-steps1">
+              <div>
+                  <img class="body-steps1-image" src="images/cleanbag stappen 2.png">
+              </div>
+            </div>
+            <div class="body-steps1-text">
+              <div>
+                <h1 class="body-steps1-title">2: Designing the product</h1>
+              </div>
+              <div>
+                <p class="body-steps1-text">a</p>
+              </div>
+            </div>
+          </div>
+          <div class="body-steps">
+            <div class="body-steps1">
+              <div>
+                  <img class="body-steps1-image" src="images/cleanbag stappen 3.png">
+              </div>
+            </div>
+            <div class="body-steps1-text">
+              <div>
+                <h1 class="body-steps1-title">3: Creating the product</h1>
+              </div>
+              <div>
+                <p class="body-steps1-text">a</p>
+              </div>
+            </div>
+          </div>
+          <div class="body-timer">
+            <h1 id="minutes">0<h1 id="minute">0:<h1 id="seconds">0<h1 id="second">0</h1></h1></h1></h1>
+          </div>
+          <div class="body-timer-text">
+            <p>Time you've been here</p>
+          </div>
+          <div class="body-co2">
+            <h1 class="co2" id="co2">0.0416</h1>
+          </div>
+          <div class="body-co2-text">
+            <p>Grams of co2</p>
           </div>
           <div class="footer">
             <div class="footer-image">
@@ -52,6 +128,8 @@
               </p>
             </div>
           </div>
-      
+      <script src="cleanbag.js">
+
+      </script>
     </body>
 </html>
