--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='about.html'">
       </div>
       <div class="head-button">
-        <img class="head-button-image" src="images/Cleanbag shoppingcart.png" onclick="window.location.href=`c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9`">
+        <a href="google.com"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
       </div>
     </div>
     <div class="body">
       <div class="body-image">
-        <a href="https://www.c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9" target="_blank"><img class="body-image-image" src="images/cleanbag menu final.png"></a>
+        <img class="body-image-image" src="images/cleanbag menu final.png">
       </div>
       <div class="body-title">
         <h1>Cleanbag<p class="copyright">©</p></h1>
@@ -45,54 +45,6 @@
           <source src="images/Cleanbag.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
-      </div>
-    </div>
-    <div class="body-steps-title">
-      <h1 class="body-steps-title1">How is the Cleanbag<p class="copyright">©</p> made?</h1>
-    </div>
-    <div class="body-steps">
-      <div class="body-steps1">
-        <div>
-            <img class="body-steps1-image" src="images/cleanbag stappen 1.png">
-        </div>
-      </div>
-      <div class="body-steps1-text">
-        <div>
-          <h1 class="body-steps1-title">1: Making the Bio-Plastic</h1>
-        </div>
-        <div>
-          <p class="body-steps1-text">a</p>
-        </div>
-      </div>
-    </div>
-     <div class="body-steps">
-      <div class="body-steps1">
-        <div>
-            <img class="body-steps1-image" src="images/cleanbag stappen 2.png">
-        </div>
-      </div>
-      <div class="body-steps1-text">
-        <div>
-          <h1 class="body-steps1-title">2: Designing the product</h1>
-        </div>
-        <div>
-          <p class="body-steps1-text">a</p>
-        </div>
-      </div>
-    </div>
-    <div class="body-steps">
-      <div class="body-steps1">
-        <div>
-            <img class="body-steps1-image" src="images/cleanbag stappen 3.png">
-        </div>
-      </div>
-      <div class="body-steps1-text">
-        <div>
-          <h1 class="body-steps1-title">3: Creating the product</h1>
-        </div>
-        <div>
-          <p class="body-steps1-text">a</p>
-        </div>
       </div>
     </div>
     <div class="body-reviews">
@@ -121,18 +73,6 @@
           <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
         </div>
       </div>
-    </div>
-    <div class="body-timer">
-      <h1 id="minutes">0<h1 id="minute">0:<h1 id="seconds">0<h1 id="second">0</h1></h1></h1></h1>
-    </div>
-    <div class="body-timer-text">
-      <p>Time you've been here</p>
-    </div>
-    <div class="body-co2">
-      <h1 class="co2" id="co2">0.0416</h1>
-    </div>
-    <div class="body-co2-text">
-      <p>Grams of co2</p>
     </div>
     <div class="footer">
       <div class="footer-image">
