Added some text

--- a/about.html
+++ b/about.html
@@ -60,7 +60,13 @@
                 <h1 class="body-steps1-title">1: Making the Bio-Plastic</h1>
               </div>
               <div>
-                <p class="body-steps1-text">a</p>
+                <p class="body-steps1-text">
+                  Firstly we made the bio-plastics in our labs.<br>
+                  The plastic was created by our best bio-plastic <br>
+                  researchers. They created the perfect material <br> 
+                  for our Cleanbag©. The bio-plastic is very <br>
+                  strong but also very elastic.
+                </p>
               </div>
             </div>
           </div>
@@ -75,7 +81,13 @@
                 <h1 class="body-steps1-title">2: Designing the product</h1>
               </div>
               <div>
-                <p class="body-steps1-text">a</p>
+                <p class="body-steps1-text">
+                  After creating the the bio-plastic we could <br>
+                  actually start designing the Cleanbag©. With <br>
+                  our skilled team of designers we quickly <br> 
+                  realised our vision, a simplistic but extremely <br>
+                  useful bio-plastic bag was born.
+                </p>
               </div>
             </div>
           </div>
@@ -90,7 +102,15 @@
                 <h1 class="body-steps1-title">3: Creating the product</h1>
               </div>
               <div>
-                <p class="body-steps1-text">a</p>
+                <p class="body-steps1-text">
+                  But the hardest part was yet to come. <br>
+                  Actually creating the cleanbag© might've<br>
+                  been the hardest part of the project. <br> 
+                  However, our highly skilled team of <br>
+                  engineers didn't see this as a problem. <br>
+                  And not much later the Cleanbag©  <br>
+                  was done.
+                </p>
               </div>
             </div>
           </div>
