--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='about.html'">
         </div>
         <div class="head-button">
-          <img class="head-button-image" src="images/Cleanbag shoppingcart.png" onclick="window.location.href=`c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9`">
+          <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
         </div>
       </div>
           <div class="body">
@@ -138,7 +138,7 @@
                 Making the world cleaner
               </p>
               <p class="footer-text">
-                Felix van Vugt | Hugo Vizee | Floris van Eijck | Julian Vletter
+                Felix van Vugt | Hugo  | Floris van Eijck | Julian Vletter
               <p>
               <p class="footer-text">
                 Harens Lyceum 3A | Wo+ Website plastic | 2024 
