--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='about.html'">
       </div>
       <div class="head-button">
-        <a href="google.com"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
+        <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
       </div>
     </div>
     <div class="body">
