--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
       </div>
       <div class="body-review">
         <div>
-          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
+          <a href="https://gratis-5162221.jouwweb.site/"><img class="body-review-1" src="images/cleanbag review troughttrail 2.png"></a>
         </div>
         <div>
-          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
+          <a href="https://gratis-5162327.jouwweb.site/"><img class="body-review-1" src="images/cleanbag review reviewradar 2.png"></a>
         </div>
         <div>
-          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
+          <a href="https://gratis-5162399.jouwweb.site/"><img class="body-review-1" src="images/cleanbag review assessmentavenue 2.png"></a>
         </div>
       </div>
       <div class="body-review">
