--- a/probleem.html
+++ b/probleem.html
@@ -24,6 +24,15 @@
             <div>
                 <h1>The problem Cleanbag<p class="copyright">©</p> solves</h1>
             </div>
+            <div>
+              <video width="45%"  controls class="body-video-2">
+                <source src="images/Cleanbag.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
+            </div>
+            <div class="body-problem-title">
+              <h1>What you can do!</h1>
+            </div>
           </div>
           <div class="footer">
             <div class="footer-image">
