--- a/about.html
+++ b/about.html
@@ -25,24 +25,13 @@
             </div>
             <div class="body-images">
               <div>
-                <img class="body-image-1" src="images/cleanbag indoctrinatie 3.png">
+                <img class="body-image-1" src="images/cleanbag indoctrinatie 2 2.png">
               </div>
               <div>
-                <img class="body-image-1" src="images/cleanbag indoctrinatie 2.png">
+                <img class="body-image-1" src="images/cleanbag indoctrinatie 3 2.png">
               </div>
               <div>
-                <img class="body-image-1" src="images/cleanbag indoctrinatie 1.png">
-              </div>
-            </div>
-            <div class="body-text">
-              <div>
-                <p>100% bio-plastics</p>
-              </div>
-              <div>
-                <p>Innovative</p>
-              </div>
-              <div>
-                <p>Extremely useful</p>
+                <img class="body-image-1" src="images/cleanbag indoctrinatie 1 2.png">
               </div>
             </div>
           </div>
@@ -114,17 +103,25 @@
               </div>
             </div>
           </div>
-          <div class="body-timer">
-            <h1 id="minutes">0<h1 id="minute">0:<h1 id="seconds">0<h1 id="second">0</h1></h1></h1></h1>
+          <div>
+            <div class="body-timer-title">
+              <h1>Your statistics</h1>
+            </div>
+            <div class="body-timer">
+              <h1 id="minutes">0<h1 id="minute">0:<h1 id="seconds">0<h1 id="second">0</h1></h1></h1></h1>
+            </div>
+            <div class="body-timer-text">
+              <p>Time you've been here</p>
+            </div>
+            <div class="body-co2">
+              <h1 class="co2" id="co2">0.0416</h1>
+            </div>
+            <div class="body-co2-text">
+              <p>Grams of co2</p>
+            </div>
           </div>
-          <div class="body-timer-text">
-            <p>Time you've been here</p>
-          </div>
-          <div class="body-co2">
-            <h1 class="co2" id="co2">0.0416</h1>
-          </div>
-          <div class="body-co2-text">
-            <p>Grams of co2</p>
+          <div>
+            <img class="body-co2-image" src="images/cleanbag co2 shit.png">
           </div>
           <div class="footer">
             <div class="footer-image">
