--- a/about.html
+++ b/about.html
@@ -117,11 +117,11 @@
               <h1 class="co2" id="co2">0.0416</h1>
             </div>
             <div class="body-co2-text">
-              <p>Grams of co2</p>
+              <p>Grams of co2 your device has emitted</p>
             </div>
           </div>
           <div>
-            <img class="body-co2-image" src="images/cleanbag co2 shit.png">
+            <img class="body-co2-image" src="images/Cleanbag co2 timer 2.png">
           </div>
           <div class="footer">
             <div class="footer-image">
@@ -135,7 +135,7 @@
                 Making the world cleaner
               </p>
               <p class="footer-text">
-                Felix van Vugt | Hugo  | Floris van Eijck | Julian Vletter
+                Felix | Hugo | Floris | Julian
               <p>
               <p class="footer-text">
                 Harens Lyceum 3A | Wo+ Website plastic | 2024 
