--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           Making the world cleaner
         </p>
         <p class="footer-text">
-          Felix van Vugt | Hugo Vizee | Floris van Eijck | Julian Vletter
+          Felix | Hugo | Floris | Julian
         <p>
         <p class="footer-text">
           Harens Lyceum 3A | Wo+ Website plastic | 2024 
