--- a/probleem.html
+++ b/probleem.html
@@ -30,9 +30,6 @@
               Your browser does not support the video tag.
               </video>
             </div>
-            <div class="body-problem-title">
-              <h1>What you can do!</h1>
-            </div>
           </div>
           <div class="footer">
             <div class="footer-image">
@@ -46,7 +43,7 @@
                 Making the world cleaner
               </p>
               <p class="footer-text">
-                Felix van Vugt | Hugo Vizee | Floris van Eijck | Julian Vletter
+                Felix | Hugo | Floris | Julian
               <p>
               <p class="footer-text">
                 Harens Lyceum 3A | Wo+ Website plastic | 2024 
