--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="head">
       <div class="head-menu">
           <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
-          <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='about.html'">
+          <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='product.html'">
       </div>
       <div class="head-button">
         <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
@@ -42,7 +42,7 @@
       </div>
       <div>
         <video width="45%"  controls class="body-video">
-          <source src="images/Cleanbag.mp4" type="video/mp4">
+          <source src="images/Cleanbag video 2.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
       </div>
