--- a/product.html
+++ b/product.html
@@ -1,93 +1,152 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">
+    <head>
+        <title>About Cleanbag</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lilita+One&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div class="head">
-      <div class="head-menu">
-          <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
-          <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='about.html'">
-      </div>
-      <div class="head-button">
-        <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
-      </div>
-    </div>
-    <div class="body">
-      <h1>About the Cleanbag<p class="copyright">©</p></h1>
-    </div>
-    <div class="body-steps-title">
-      <h1 class="body-steps-title1">How is the Cleanbag<p class="copyright">©</p> made?</h1>
-    </div>
-    <div class="body-steps">
-      <div class="body-steps1">
-        <div>
-            <img class="body-steps1-image" src="images/cleanbag stappen 1.png">
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lilita+One&display=swap" rel="stylesheet">
+    </head>
+    <body>
+      <div class="head">
+        <div class="head-menu">
+            <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
+            <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='about.html'">
+        </div>
+        <div class="head-button">
+          <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
         </div>
       </div>
-      <div class="body-steps1-text">
-        <div>
-          <h1 class="body-steps1-title">1: Making the Bio-Plastic</h1>
-        </div>
-        <div>
-          <p class="body-steps1-text">
-            Firstly we made the bio-plastics in our labs.<br>
-            The plastic was created by our best bio-plastic <br>
-            researchers. They created the perfect material <br> 
-            for our Cleanbag©. The bio-plastic is very <br>
-            strong but also very elastic.
-          </p>
-        </div>
-      </div>
-    </div>
-     <div class="body-steps">
-      <div class="body-steps1">
-        <div>
-            <img class="body-steps1-image" src="images/cleanbag stappen 2.png">
-        </div>
-      </div>
-      <div class="body-steps1-text">
-        <div>
-          <h1 class="body-steps1-title">2: Designing the product</h1>
-        </div>
-        <div>
-          <p class="body-steps1-text">
-            After creating the the bio-plastic we could <br>
-            actually start designing the Cleanbag©. With <br>
-            our skilled team of designers we quickly <br> 
-            realised our vision, a simplistic but extremely <br>
-            useful bio-plastic bag was born.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="body-steps">
-      <div class="body-steps1">
-        <div>
-            <img class="body-steps1-image" src="images/cleanbag stappen 3.png">
-        </div>
-      </div>
-      <div class="body-steps1-text">
-        <div>
-          <h1 class="body-steps1-title">3: Creating the product</h1>
-        </div>
-        <div>
-          <p class="body-steps1-text">
-            But the hardest part was yet to come. <br>
-            Actually creating the cleanbag© might've<br>
-            been the hardest part of the project. <br> 
-            However, our highly skilled team of <br>
-            engineers didn't see this as a problem. <br>
-            And not much later the Cleanbag©  <br>
-            was done.
-          </p>
-        </div>
-      </div>
-    </div>
-  </body>
+          <div class="body">
+            <div>
+              <h1>About the Cleanbag<p class="copyright">©</p></h1>
+            </div>
+            <div class="body-images">
+              <div>
+                <img class="body-image-1" src="images/cleanbag indoctrinatie 2 2.png">
+              </div>
+              <div>
+                <img class="body-image-1" src="images/cleanbag indoctrinatie 3 2.png">
+              </div>
+              <div>
+                <img class="body-image-1" src="images/cleanbag indoctrinatie 1 2.png">
+              </div>
+            </div>
+          </div>
+          <div class="body-steps-title">
+            <h1 class="body-steps-title1">How is the Cleanbag<p class="copyright">©</p> made?</h1>
+          </div>
+          <div class="body-steps">
+            <div class="body-steps1">
+              <div>
+                  <img class="body-steps1-image" src="images/cleanbag stappen 1.png">
+              </div>
+            </div>
+            <div class="body-steps1-text">
+              <div>
+                <h1 class="body-steps1-title">1: Making the Bio-Plastic</h1>
+              </div>
+              <div>
+                <p class="body-steps1-text">
+                  Firstly we made the bio-plastics in our labs.<br>
+                  The plastic was created by our best bio-plastic <br>
+                  researchers. They created the perfect material <br> 
+                  for our Cleanbag©. The bio-plastic is very <br>
+                  strong but also very elastic.
+                </p>
+              </div>
+            </div>
+          </div>
+           <div class="body-steps">
+            <div class="body-steps1">
+              <div>
+                  <img class="body-steps1-image" src="images/cleanbag stappen 2.png">
+              </div>
+            </div>
+            <div class="body-steps1-text">
+              <div>
+                <h1 class="body-steps1-title">2: Designing the product</h1>
+              </div>
+              <div>
+                <p class="body-steps1-text">
+                  After creating the the bio-plastic we could <br>
+                  actually start designing the Cleanbag©. With <br>
+                  our skilled team of designers we quickly <br> 
+                  realised our vision, a simplistic but extremely <br>
+                  useful bio-plastic bag was born.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="body-steps">
+            <div class="body-steps1">
+              <div>
+                  <img class="body-steps1-image" src="images/cleanbag stappen 3.png">
+              </div>
+            </div>
+            <div class="body-steps1-text">
+              <div>
+                <h1 class="body-steps1-title">3: Creating the product</h1>
+              </div>
+              <div>
+                <p class="body-steps1-text">
+                  But the hardest part was yet to come. <br>
+                  Actually creating the cleanbag© might've<br>
+                  been the hardest part of the project. <br> 
+                  However, our highly skilled team of <br>
+                  engineers didn't see this as a problem. <br>
+                  And not much later the Cleanbag©  <br>
+                  was done.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="body-timer-title">
+              <h1>Your statistics</h1>
+            </div>
+            <div class="body-timer">
+              <h1 id="minutes">0<h1 id="minute">0:<h1 id="seconds">0<h1 id="second">0</h1></h1></h1></h1>
+            </div>
+            <div class="body-timer-text">
+              <p>Time you've been here</p>
+            </div>
+            <div class="body-co2">
+              <h1 class="co2" id="co2">0.0416</h1>
+            </div>
+            <div class="body-co2-text">
+              <p>Grams of co2 your device has emitted</p>
+            </div>
+          </div>
+          <div>
+            <img class="body-co2-image" src="images/Cleanbag co2 timer 2.png">
+          </div>
+          <div class="footer">
+            <div class="footer-image">
+              <img class="footer-image-image" src="images/Cleanbag.png">
+            </div>
+            <div class="footer-image-title">
+              <p class="footer-title">
+                Cleanbag©
+              </p>
+              <p class="footer-title-small">
+                Making the world cleaner
+              </p>
+              <p class="footer-text">
+                Felix | Hugo | Floris | Julian
+              <p>
+              <p class="footer-text">
+                Harens Lyceum 3A | Wo+ Website plastic | 2024 
+              </p>
+              <p class="footer-text-disclaimer">
+                *Schoolopdracht | Wij zijn niet verantwoordelijk voor aankopen* 
+              </p>
+            </div>
+          </div>
+      <script src="cleanbag.js">
+
+      </script>
+    </body>
 </html>
