--- a/help.html
+++ b/help.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">
-
-
-      
+    <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">      
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lilita+One&display=swap" rel="stylesheet">
@@ -20,12 +17,23 @@
           <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
         </div>
       </div>
-      <div class="body-problem-title">
-        <h1>What you can do!</h1>
+      <div class="body-help-title">
+        <h1>How can you help win the race against climate change?</h1>
       </div>
-
-
-
+      <div class="body-help-div">
+        <img src="images/cleanbag help 1.png" class="body-help-div-image">
+        <img src="images/cleanbag help 2.png" class="body-help-div-image">
+        <img src="images/cleanbag help 3.png" class="body-help-div-image">
+      </div>
+      <div class="body-help-text">
+        <p>We understand that you can't stop using plastic immediatly. 
+           That's why we created 3 simple guidelines. Preferably only use bio-plastics.
+           These don't have as big as an impact as normal plastic. Next up recycle
+           as much plastic as you can, by sorting plastic. This way the plastic that 
+           you use get a second home. And last but not least, don't throw away any bio-plastics
+           outside. Try to always find a trashcan. 
+        </p>
+      </div>
     <div class="footer">
       <div class="footer-image">
         <img class="footer-image-image" src="images/Cleanbag.png">
