--- a/probleem.html
+++ b/probleem.html
@@ -31,6 +31,24 @@
               </video>
             </div>
           </div>
+          <div class="body-problem">
+            <div class="body-problem-div">
+              <div class="body-problem-div-picture"> 
+                <img src="images/cleanbag probleem foto.png" class="body-problem-picture">
+              </div>
+              <div class="body-problem-div-text">
+                <h1>Why is this a problem?</h1>
+                <p>All the plastic that is thrown away will eventually <br> collect in a big pile. 
+                   Here it will slowly break appart <br>, in extremely  
+                   small micro-plastics. At this point <br> the problem starts.
+                   The little plastic parts will be eaten <br> by 
+                   animals. Many will die, but some will survive. <br> These might get eaten
+                   and this way, we without knowing <br> eat micro-plastics. Besides this all 
+                   the plastic <br> leaves behind a massive carbon footprint. 
+                </p>
+              </div>
+            </div>
+          </div>
           <div class="footer">
             <div class="footer-image">
               <img class="footer-image-image" src="images/Cleanbag.png">
