--- a/probleem.html
+++ b/probleem.html
@@ -12,9 +12,18 @@
     </head>
     <body>
         <div class="head">
-            <div class="head-menu">
-                <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
-                <img class="head-image-menu" src="images/Cleanbag info 2.png" onclick="window.location.href ='about.html'">
+                <div class="head-menu">
+                  <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
+                  <div class="dropdown">
+                    <img class="head-image-menu" src="images/Cleanbag info 2.png">
+                    <div class="dropdown-content">
+                      <a href="product.html"><p>Product</p></a>
+                      <a href="probleem.html"><p>Problem</p></a>
+                      <a href="help.html"><p>Help</p></a>
+                      <a href="contact.html"><p>Contact</p></a>
+                    </div>
+                  </div>
+              </div>
             </div>
             <div class="head-button">
                 <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
