--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,65 @@
 <html>
   <head>
     <title>Contact Cleanbag</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lilita+One&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>a</p>
-  </body>
+      <div class="head">
+        <div class="head-menu">
+          <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
+          <div class="dropdown">
+            <img class="head-image-menu" src="images/Cleanbag info 2.png">
+            <div class="dropdown-content">
+              <a href="product.html"><p>Product</p></a>
+              <a href="probleem.html"><p>Problem</p></a>
+              <a href="help.html"><p>Help</p></a>
+              <a href="contact.html"><p>Contact</p></a>
+            </div>
+          </div>
+      </div>
+    <div class="head-button">
+      <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
+    </div>
+  </div>
+  <div class="body-contact-title">
+    <h1>Contact Cleanbag<p class="copyright">©</p></h1> 
+  </div>
+  <div class="body-contact-maps-title">
+    <h1>Give us a visit!</h1>
+  </div>
+  <div class="body-contact-maps">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1165661.4388221097!2d18.264913804691677!3d47.26651539718115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741d95768ccdc5f%3A0xfb60d75df7be34d5!2sCleanBag!5e0!3m2!1snl!2snl!4v1718653195193!5m2!1snl!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <div class="body-contact-maps-title">
+    <h1>Or mail/call us!</h1>
+    <p>Phone number: +31 6 69540420</p>
+    <p class="body-contact-maps-text">E-mail: support@cleanbag.shop</p>
+  </div>
+  <div class="footer">
+    <div class="footer-image">
+      <img class="footer-image-image" src="images/Cleanbag.png">
+    </div>
+    <div class="footer-image-title">
+      <p class="footer-title">
+        Cleanbag©
+      </p>
+      <p class="footer-title-small">
+        Making the world cleaner
+      </p>
+      <p class="footer-text">
+        Felix | Hugo | Floris | Julian
+      <p>
+      <p class="footer-text">
+        Harens Lyceum 3A | Wo+ Website plastic | 2024 
+      </p>
+      <p class="footer-text-disclaimer">
+        *Schoolopdracht | Wij zijn niet verantwoordelijk voor aankopen* 
+      </p>
+    </div>
+  </div>
+</body>
 </html>
