--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Cleanbag</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">
@@ -54,6 +53,9 @@
         Your browser does not support the video tag.
         </video>
       </div>
+    </div>
+    <div class="body-purpose">
+      <h1 class="body-purpose-title">What the Cleanbag<p class="copyright">©</p> offers</h1>
     </div>
     <div class="body-reviews">
       <div class="body-reviews-title">
