--- a/probleem.html
+++ b/probleem.html
@@ -52,7 +52,8 @@
                    The little plastic parts will be eaten <br> by 
                    animals. Many will die, but some will survive. <br> These might get eaten
                    and this way, we without knowing <br> eat micro-plastics. Besides this all 
-                   the plastic <br> leaves behind a massive carbon footprint. 
+                   the plastic <br> leaves behind a massive carbon footprint. <br>
+                   
                 </p>
               </div>
             </div>
