--- a/product.html
+++ b/product.html
@@ -128,7 +128,7 @@
               <p>Grams of co2 your device has emitted</p>
             </div>
           </div>
-          <div>
+          <div class="body-co2-div">
             <img class="body-co2-image" src="images/Cleanbag co2 timer 2.png">
           </div>
           <div class="footer">
