--- a/help.html
+++ b/help.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">      
+    <link rel="icon" type="image/x-icon" href="images/favicon (2).ico"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lilita+One&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="body-help-title">
-        <h1>How can you help win the race against climate change?</h1>
+        <h1>Help fight climate change!</h1>
       </div>
       <div class="body-help-div">
         <img src="images/cleanbag help 1.png" class="body-help-div-image">
@@ -34,12 +34,28 @@
         <img src="images/cleanbag help 3.png" class="body-help-div-image">
       </div>
       <div class="body-help-text">
-        <p>We understand that you can't stop using plastic immediatly. 
-           That's why we created 3 simple guidelines. Preferably only use bio-plastics.
-           These don't have as big as an impact as normal plastic. Next up recycle
-           as much plastic as you can, by sorting plastic. This way the plastic that 
-           you use get a second home. And last but not least, don't throw away any bio-plastics
-           outside. Try to always find a trashcan. 
+        <p>
+          Don't throw away your old garbage! <br>
+          Instead throw it away in trashcan. <br>
+          This way the plastics won't slowly <br>
+          conquer the world, where they'll <br>
+          hurt the environment.
+        </p>
+        <p>
+          Try to recycle as much  <br>
+          as possible! This way <br>
+          the plastic won't get burned <br>
+          or disposed in other bad ways, <br>
+          but instead gets fully recycled <br>
+           and reused!
+        </p>
+        <p>
+          Use as many bio-plastics as possible! <br>
+          Bio-plastics don't have as big as an <br>
+          impact on the environment, and won't <br>
+          leave as big as a carbon footprint. <br>
+          Besides this bio-plastics can easily <br>
+          be recycled!.
         </p>
       </div>
     <div class="footer">
