--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
     </div>
     <div class="body-purpose">
       <h1 class="body-purpose-title">What the Cleanbag<p class="copyright">©</p> offers</h1>
+      <div class="body-images">
+        <div>
+          <img class="body-image-1" src="images/cleanbag indoctrinatie 2 2.png">
+        </div>
+        <div>
+          <img class="body-image-1" src="images/cleanbag indoctrinatie 3 2.png">
+        </div>
+        <div>
+          <img class="body-image-1" src="images/cleanbag indoctrinatie 1 2.png">
+        </div>
+      </div>
+    </div>
+    <div class="body-team-div">
+      <h1>The Cleanbag<p class="copyright">©</p>team</h1>
+      <div>
+        <img class="body-team-image" src="images/cleanbag us.png">
+      </div>
     </div>
     <div class="body-reviews">
       <div class="body-reviews-title">
