--- a/product.html
+++ b/product.html
@@ -31,6 +31,12 @@
             <div>
               <h1>About the Cleanbag<p class="copyright">©</p></h1>
             </div>
+            <div>
+              <video width="45%"  controls class="body-product-video">
+                <source src="images/Cleanbag video 2.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
+            </div>
             <div class="body-images">
               <div>
                 <img class="body-image-1" src="images/cleanbag indoctrinatie 2 2.png">
