--- a/shop.html
+++ b/shop.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Cleanbag Shop</title>
 
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">
+
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lilita+One&display=swap" rel="stylesheet">
   </head>
   <body>
-    
+    <div class="head">
+      <div class="head-menu">
+        <img class="head-image" src="images/Cleanbag.png" onclick="window.location.href ='index.html'">
+        <div class="dropdown">
+          <img class="head-image-menu" src="images/Cleanbag info 2.png">
+          <div class="dropdown-content">
+            <a href="product.html"><p>Product</p></a>
+            <a href="probleem.html"><p>Problem</p></a>
+            <a href="help.html"><p>Help</p></a>
+            <a href="contact.html"><p>Contact</p></a>
+          </div>
+        </div>
+    </div>
+      <div class="head-button">
+          <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
+      </div>
+    </div>
+    <div class="body-shop-timer">
+      <h1>Sale: &nbsp; <h1>0</h1><h1>0:</h1><h1>0</h1><h1>0</h1></h1>
+    </div>
+    <div class="body-shop-div">
+      <div>
+        <img src="images/cleanbag indoctrinatie 1.png">
+      </div>
+      <div>
+        <h1>The Cleanbag<p class="copyright">©</p></h1>
+        <p class="body-shop-text">€6̶.9̶9̶ E̶U̶R̶  &nbsp;&nbsp;&nbsp;  <p class="body-shop-text2">€4.99 EUR</p> <button class="body-shop-button">Sale</button> </p>
+        <p class="body-shop-tax">Tax included</p>
+        <p>Quantity:</p>
+        <input type="number" min="1" max="9" value="1" class="body-shop-input">
+        <button class="body-shop-cart">Buy</button>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="footer-image">
+        <img class="footer-image-image" src="images/Cleanbag.png">
+      </div>
+      <div class="footer-image-title">
+        <p class="footer-title">
+          Cleanbag©
+        </p>
+        <p class="footer-title-small">
+          Making the world cleaner
+        </p>
+        <p class="footer-text">
+          Felix | Hugo | Floris | Julian
+        <p>
+        <p class="footer-text">
+          Harens Lyceum 3A | Wo+ Website plastic | 2024 
+        </p>
+        <p class="footer-text-disclaimer">
+          *Schoolopdracht | Wij zijn niet verantwoordelijk voor aankopen* 
+        </p>
+      </div>
+    </div>
+
+    <script>
+      
+    </script>
   </body>
 </html>
 
