--- a/help.html
+++ b/help.html
@@ -16,13 +16,13 @@
                 <div class="dropdown-content">
                   <a href="product.html"><p>Product</p></a>
                   <a href="probleem.html"><p>Problem</p></a>
-                  <a href="help.html"><p>Help</p></a>
+                  <a href="help.html"><p>Climate</p></a>
                   <a href="contact.html"><p>Contact</p></a>
                 </div>
               </div>
           </div>
         <div class="head-button">
-          <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
+          <a onclick="window.location.href ='shop.html'"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
         </div>
       </div>
       <div class="body-help-title">
@@ -38,7 +38,7 @@
           Don't throw away your old garbage! <br>
           Instead throw it away in trashcan. <br>
           This way the plastics won't slowly <br>
-          conquer the world, where they'll <br>
+          conquer the world, where it'll <br>
           hurt the environment.
         </p>
         <p>
@@ -47,7 +47,7 @@
           the plastic won't get burned <br>
           or disposed in other bad ways, <br>
           but instead gets fully recycled <br>
-           and reused!
+           and re-used!
         </p>
         <p>
           Use as many bio-plastics as possible! <br>
@@ -55,7 +55,7 @@
           impact on the environment, and won't <br>
           leave as big as a carbon footprint. <br>
           Besides this bio-plastics can easily <br>
-          be recycled!.
+          be recycled!
         </p>
       </div>
     <div class="footer">
