--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
           <div class="dropdown">
             <img class="head-image-menu" src="images/Cleanbag info 2.png">
             <div class="dropdown-content">
-              <a href="product.html"><p>Product</p></a>
-              <a href="probleem.html"><p>Problem</p></a>
-              <a href="help.html"><p>Help</p></a>
-              <a href="contact.html"><p>Contact</p></a>
+              <a href="product.html"><p class="body-menu-text">Product</p></a>
+              <a href="probleem.html"><p class="body-menu-text">Problem</p></a>
+              <a href="help.html"><p class="body-menu-text">Climate</p></a>
+              <a href="contact.html"><p class="body-menu-text">Contact</p></a>
             </div>
           </div>
       </div>
       <div class="head-button">
-        <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
+        <a onclick="window.location.href ='shop.html'"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
       </div>
     </div>
     <div class="body">
@@ -87,17 +87,6 @@
         </div>
         <div>
           <a href="https://gratis-5162399.jouwweb.site/"><img class="body-review-1" src="images/cleanbag review assessmentavenue 2.png"></a>
-        </div>
-      </div>
-      <div class="body-review">
-        <div>
-          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
-        </div>
-        <div>
-          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
-        </div>
-        <div>
-          <a><img class="body-review-1" src="images/cleanbag review 1.png"></a>
         </div>
       </div>
     </div>
