--- a/probleem.html
+++ b/probleem.html
@@ -19,13 +19,13 @@
                     <div class="dropdown-content">
                       <a href="product.html"><p>Product</p></a>
                       <a href="probleem.html"><p>Problem</p></a>
-                      <a href="help.html"><p>Help</p></a>
+                      <a href="help.html"><p>Climate</p></a>
                       <a href="contact.html"><p>Contact</p></a>
                     </div>
                   </div>
               </div>
             <div class="head-button">
-                <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
+              <a onclick="window.location.href ='shop.html'"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
             </div>
           </div>
           <div class="body">
@@ -47,12 +47,13 @@
               <div class="body-problem-div-text">
                 <h1>Why is this a problem?</h1>
                 <p>All the plastic that is thrown away will eventually <br> collect in a big pile. 
-                   Here it will slowly break appart <br>, in extremely  
+                   Here it will slowly break appart <br> in extremely  
                    small micro-plastics. At this point <br> the problem starts.
                    The little plastic parts will be eaten <br> by 
                    animals. Many will die, but some will survive. <br> These might get eaten
                    and this way, we without knowing <br> eat micro-plastics. Besides this all 
                    the plastic <br> leaves behind a massive carbon footprint. <br>
+                   This is the main reason of climate change.
                    
                 </p>
               </div>
