--- a/product.html
+++ b/product.html
@@ -18,13 +18,13 @@
                 <div class="dropdown-content">
                   <a href="product.html"><p>Product</p></a>
                   <a href="probleem.html"><p>Problem</p></a>
-                  <a href="help.html"><p>Help</p></a>
+                  <a href="help.html"><p>Climate</p></a>
                   <a href="contact.html"><p>Contact</p></a>
                 </div>
               </div>
           </div>
         <div class="head-button">
-          <a href="https://c3e5e3-3b.myshopify.com/products/cleanbag-%C2%A9"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
+          <a onclick="window.location.href ='shop.html'"><img class="head-button-image" src="images/Cleanbag shoppingcart.png"></a>
         </div>
       </div>
           <div class="body">
